--- a/Email_Generator.ipynb
+++ b/Email_Generator.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "llm = ChatGroq(\n",
     "    temperature=0,\n",
-    "    groq_api_key = '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',\n",
+    "    groq_api_key = 'Enter your API KEY',\n",
     "    model_name = \"llama-3.1-70b-versatile\"\n",
     "    #other params....\n",
     ")"
